--- a/tmdbandroid/versions.gradle
+++ b/tmdbandroid/versions.gradle
@@ -7,6 +7,14 @@ ext {
             'material'              : '1.3.0',
             'constraintLayout'      : '2.0.4',
 
+            'gson'                  : '2.8.6',
+            'retrofit2'             : '2.8.0',
+            'coroutinesCore'        : '1.3.8',
+            'coroutinesAndroid'     : '1.3.5',
+
+            // Room
+            'room'                  : '2.2.6',
+
             // Unit test
             'junit'                 : '4.13.1',
             'test_junit'            : '1.1.2',
