--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'com.google.secrets_gradle_plugin' version '0.4'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -47,6 +48,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.1.2"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
@@ -55,10 +57,17 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:2.4.0-rc01"
     implementation "androidx.room:room-ktx:2.4.0-rc01"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-beta02"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-beta02"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0-beta02"
+
     kapt "androidx.room:room-compiler:2.4.0-rc01"
 
     //KtLint
-    ktlint 'com.pinterest:ktlint:0.43.2'
+    ktlint "com.pinterest:ktlint:0.43.2"
 
     // Test
     testImplementation "androidx.room:room-testing:2.3.0"
