--- a/tmdbandroid/app/src/main/AndroidManifest.xml
+++ b/tmdbandroid/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.salhugues.tmdbandroid">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:name=".TmDbApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,14 +14,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tmdbandroid">
         <activity
-            android:name="com.salhugues.tmdbandroid.ui.home.HomeActivity"
+            android:name=".ui.ExampleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <nav-graph android:value="@navigation/home_graph" />
         </activity>
     </application>
-
 </manifest>
