--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.1.2"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // Coroutines
@@ -65,6 +67,12 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0-beta02"
 
     kapt "androidx.room:room-compiler:2.4.0-rc01"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     //KtLint
     ktlint "com.pinterest:ktlint:0.43.2"
