--- a/tmdbandroid/app/src/main/AndroidManifest.xml
+++ b/tmdbandroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.salhugues.tmdbandroid">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -12,7 +13,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tmdbandroid">
+        android:theme="@style/Theme.Tmdbandroid"
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:targetApi="n">
         <activity
             android:name=".ui.ExampleActivity"
             android:exported="false" />
