--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -60,16 +60,16 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.0-rc01"
-    implementation "androidx.room:room-ktx:2.4.0-rc01"
+    implementation "androidx.room:room-runtime:2.4.0"
+    implementation "androidx.room:room-ktx:2.4.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-beta02"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-beta02"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0-beta02"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-rc01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-rc01"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0-rc01"
 
-    kapt "androidx.room:room-compiler:2.4.0-rc01"
+    kapt "androidx.room:room-compiler:2.4.0"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
@@ -81,7 +81,7 @@ dependencies {
     ktlint "com.pinterest:ktlint:0.43.2"
 
     // Test
-    testImplementation "androidx.room:room-testing:2.3.0"
+    testImplementation "androidx.room:room-testing:2.4.0"
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
@@ -93,6 +93,7 @@ task ktlint(type: JavaExec, group: "verification") {
     main = "com.pinterest.ktlint.Main"
     args "src/**/*.kt"
 }
+check.dependsOn ktlint
 
 afterEvaluate {
     assembleDebug.dependsOn ktlint
