--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,4 +1,4 @@
-name: Android Check Build
+name: Android CI Check & Build
 
 on: 
   push:
@@ -15,13 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set Up JDK
+      - name: Set Up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+          java-version: 11
 
       - name: Run Tests
         run: ./gradlew test
@@ -30,4 +27,4 @@ jobs:
         run: ./gradlew ktlint
 
       - name: Build Project
-        run: ./gradlew assemble
+        run: ./gradlew build
