--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -19,7 +19,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-
+      - name: Access TMDB_API_KEY
+        env:
+          API_KEY: ${{ secrets.TMDB_API_KEY }}
+        run: echo API_KEY=\"$API_KEY\" > ./local.properties
+      
       - name: Run Tests
         run: ./gradlew test
 
