--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -13,7 +13,7 @@ jobs:
         working-directory:
           ./tmdbandroid
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Set Up JDK 11
         uses: actions/setup-java@v1
@@ -22,7 +22,7 @@ jobs:
       - name: Access TMDB_API_KEY
         env:
           API_KEY: ${{ secrets.TMDB_API_KEY }}
-        run: echo API_KEY=\"$API_KEY\" > ./local.properties
+        run: echo TMDB_API_KEY=\"$TMDB_API_KEY\" > ./local.properties
       
       - name: Run Tests
         run: ./gradlew test
