--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -36,6 +36,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 configurations {
@@ -56,8 +61,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
 
     // Room
     implementation "androidx.room:room-runtime:2.4.0"
@@ -83,6 +88,12 @@ dependencies {
     // Test
     testImplementation "androidx.room:room-testing:2.4.0"
     testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    testImplementation "androidx.test:core-ktx:1.4.0"
+    testImplementation "org.robolectric:robolectric:4.6.1"
+    testImplementation "io.cucumber:cucumber-java8:7.2.1"
+    testImplementation "io.cucumber:cucumber-junit:7.2.1"
+    testImplementation "io.cucumber:cucumber-picocontainer:1.2.6"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 }
