Hot android_build
 fixed wrong api__key_argument

--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Access TMDB_API_KEY
         env:
           API_KEY: ${{ secrets.TMDB_API_KEY }}
-        run: echo TMDB_API_KEY=\"$API_KEY\" > ./local.properties
+        run: echo API_KEY=\"$API_KEY\" > ./local.properties
       
       - name: Run Tests
         run: ./gradlew test
