--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -2,19 +2,19 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'com.google.secrets_gradle_plugin' version '0.4'
+    id 'com.google.secrets_gradle_plugin' version '0.6.1'
     id 'androidx.navigation.safeargs'
     id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion '30.0.3'
+    compileSdkVersion 32
+    buildToolsVersion '32.0.0'
 
     defaultConfig {
         applicationId "com.salhugues.tmdbandroid"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
@@ -44,44 +44,43 @@ configurations {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.4.0"
-    implementation "com.google.android.material:material:1.4.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.2"
-    implementation "com.google.code.gson:gson:2.8.9"
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
     implementation "com.jakewharton.timber:timber:5.0.1"
-    implementation "androidx.fragment:fragment-ktx:1.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.0"
-    implementation "androidx.room:room-ktx:2.4.0"
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-rc01"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-rc01"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0-rc01"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.4.2'
 
-    kapt "androidx.room:room-compiler:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.2"
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    kapt "com.google.dagger:hilt-compiler:2.38.1"
+    implementation 'com.google.dagger:hilt-android:2.42'
+    kapt 'com.google.dagger:hilt-compiler:2.42'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     //KtLint
-    ktlint "com.pinterest:ktlint:0.43.2"
+    ktlint 'com.pinterest:ktlint:0.45.2'
 
     // Test
-    testImplementation "androidx.room:room-testing:2.4.0"
+    testImplementation "androidx.room:room-testing:2.4.2"
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
@@ -90,7 +89,7 @@ dependencies {
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass.set("com.pinterest.ktlint.Main")
     args "src/**/*.kt"
 }
 check.dependsOn ktlint
@@ -102,6 +101,6 @@ afterEvaluate {
 task ktlintFormat(type: JavaExec, group: "formatting") {
     description = "Fix Kotlin code style deviations."
     classpath = configurations.ktlint
-    main = "com.pinterest.ktlint.Main"
+    mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "src/**/*.kt"
 }
