--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion '32.0.0'
 
     defaultConfig {
-        applicationId "com.salhugues.tmdbandroid"
+        applicationId "com.salhugues.tmdbandroid.app"
         minSdkVersion 21
         targetSdkVersion 32
         versionCode 1
