--- a/tmdbandroid/app/src/main/AndroidManifest.xml
+++ b/tmdbandroid/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".TmDbApplication"
+        android:name=".app.TmDbApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,10 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tmdbandroid">
         <activity
-            android:name=".ui.ExampleActivity"
+            android:name=".app.ui.ExampleActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.home.HomeActivity"
+            android:name=".app.ui.home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
