--- a/tmdbandroid/app/build.gradle
+++ b/tmdbandroid/app/build.gradle
@@ -8,13 +8,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
     buildToolsVersion '30.0.3'
 
     defaultConfig {
         applicationId "com.salhugues.tmdbandroid"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -44,32 +44,32 @@ configurations {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.4.0"
-    implementation "com.google.android.material:material:1.4.0"
-    implementation "androidx.constraintlayout:constraintlayout:2.1.2"
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "com.google.android.material:material:1.6.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "com.google.code.gson:gson:2.8.9"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10"
     implementation "com.jakewharton.timber:timber:5.0.1"
-    implementation "androidx.fragment:fragment-ktx:1.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     // Room
-    implementation "androidx.room:room-runtime:2.4.0"
-    implementation "androidx.room:room-ktx:2.4.0"
+    implementation "androidx.room:room-runtime:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
 
     // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.4.0-rc01"
-    implementation "androidx.navigation:navigation-ui-ktx:2.4.0-rc01"
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.0-rc01"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0-alpha01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.6.0-alpha01"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.6.0-alpha01"
 
-    kapt "androidx.room:room-compiler:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.3"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
@@ -78,10 +78,10 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     //KtLint
-    ktlint "com.pinterest:ktlint:0.43.2"
+    ktlint "com.pinterest:ktlint:0.47.1"
 
     // Test
-    testImplementation "androidx.room:room-testing:2.4.0"
+    testImplementation "androidx.room:room-testing:2.4.3"
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
